--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^7.3.1",
     "axios": "^1.11.0",
     "bootstrap": "^5.3.8",
+    "chart.js": "^4.5.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
