--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,41 @@
-name: Auto Deploy Swag-Stitch
+name: Deploy to swag-stitch.dhimansoft.com
 
 on:
   push:
     branches:
-      - main
+      - main   # or whichever branch you want to deploy
 
 jobs:
-  deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Deploy to Plesk via SSH
-        uses: appleboy/ssh-action@v0.1.6
+      # Checkout repo
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      # Setup Node.js
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
         with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USER }}
-          key: ${{ secrets.SERVER_SSH_KEY }}
-          port: 22
-          script: |
-            cd /var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com
-            ./deploy.sh
+          node-version: 18
+
+      # Install and build frontend
+      - name: Install dependencies
+        working-directory: ./Frontend
+        run: npm install
+
+      - name: Build project
+        working-directory: ./Frontend
+        run: npm run build
+
+      # Deploy via FTP
+      - name: Upload via FTP
+        uses: SamKirkland/FTP-Deploy-Action@v4.3.4
+        with:
+          server: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          protocol: ftps # or ftp depending on your host
+          server-dir: /swag-stitch.dhimansoft.com/
+          local-dir: ./Frontend/dist/
