--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,40 +3,63 @@ name: Deploy to swag-stitch.dhimansoft.com
 on:
   push:
     branches:
-      - main   # or whichever branch you want to deploy
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      # Checkout repo
+      # 1️⃣ Checkout code
       - name: Checkout code
         uses: actions/checkout@v3
 
-      # Setup Node.js
+      # 2️⃣ Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
 
-      # Install and build frontend
-      - name: Install dependencies
+      # 3️⃣ Build Frontend
+      - name: Install Frontend dependencies
         working-directory: ./Frontend
         run: npm install
 
-      - name: Build project
+      - name: Build Frontend
         working-directory: ./Frontend
         run: npm run build
 
-      # Deploy via FTP
-      - name: Upload via FTP
-        uses: wlixcc/SFTP-Deploy-Action@v1.2
+      # 4️⃣ Upload Frontend via SFTP
+      - name: Upload Frontend
+        uses: appleboy/scp-action@v0.1.7
         with:
-          server: ${{ secrets.FTP_HOST }}
-          port: 22 # or 21 for FTP
+          host: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASSWORD }}
-          protocol: sftp # or ftp depending on your host
-          server-dir: /swag-stitch.dhimansoft.com/
-          local-dir: ./Frontend/dist/
+          port: 22
+          source: "./Frontend/dist/*"
+          target: "/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/"
+
+      # 5️⃣ Upload Backend via SFTP
+      - name: Upload Backend
+        uses: appleboy/scp-action@v0.1.7
+        with:
+          host: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 22
+          source: "./Backend/*"
+          target: "/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Backend/"
+
+      # 6️⃣ Run deploy.sh on server
+      - name: Run deploy.sh
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.FTP_HOST }}
+          username: ${{ secrets.FTP_USER }}
+          password: ${{ secrets.FTP_PASSWORD }}
+          port: 22
+          script: |
+            cd /var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/
+            chmod +x deploy.sh
+            ./deploy.sh
