--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,3 +1,72 @@
+# name: Deploy to swag-stitch.dhimansoft.com
+
+# on:
+#   push:
+#     branches:
+#       - main
+
+# jobs:
+#   build-and-deploy:
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       # 1️⃣ Checkout code
+#       - name: Checkout code
+#         uses: actions/checkout@v3
+
+#       # 2️⃣ Setup Node.js
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v3
+#         with:
+#           node-version: 18
+
+#       # 3️⃣ Build Frontend
+#       - name: Install Frontend dependencies
+#         working-directory: ./Frontend
+#         run: npm install
+
+#       - name: Build Frontend
+#         working-directory: ./Frontend
+#         run: npm run build
+
+#       # 4️⃣ Sync Frontend using rsync over SSH
+#       - name: Sync Frontend
+#         env:
+#           SSH_PASS: ${{ secrets.SFTP_PASSWORD }}
+#         # run: |
+#         #   rsync -avz --delete -e "ssh -p 22" ./Frontend/dist/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/
+
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y sshpass
+#           sshpass -p ${{ secrets.SFTP_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -p 22" ./Frontend/dist/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/
+
+#       # 5️⃣ Sync Backend using rsync over SSH
+#       - name: Sync Backend
+#         env:
+#           SSH_PASS: ${{ secrets.SFTP_PASSWORD }}
+#         # run: |
+#         #   rsync -avz --exclude 'node_modules' --exclude '.git' --exclude '.github' -e "ssh -p 22" ./Backend/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Backend/
+#         run: |
+#           sudo apt-get update
+#           sudo apt-get install -y sshpass
+#           sshpass -p ${{ secrets.SFTP_PASSWORD }} rsync -avz --delete -e "ssh -o StrictHostKeyChecking=no -p 22" ./Frontend/dist/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/
+
+#       # 6️⃣ Run deploy.sh on server via SSH
+#       - name: Run deploy.sh
+#         uses: appleboy/ssh-action@v0.1.7
+#         with:
+#           host: ${{ secrets.SFTP_HOST }}
+#           username: ${{ secrets.SFTP_USER }}
+#           password: ${{ secrets.SFTP_PASSWORD }}
+#           port: 22
+#           script: |
+#             cd /var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/
+#             chmod +x deploy.sh
+#             ./deploy.sh
+
+
+
 name: Deploy to swag-stitch.dhimansoft.com
 
 on:
@@ -29,21 +98,25 @@ jobs:
         working-directory: ./Frontend
         run: npm run build
 
-      # 4️⃣ Sync Frontend using rsync over SSH
+      # 4️⃣ Install sshpass for rsync with password
+      - name: Install sshpass
+        run: sudo apt-get update && sudo apt-get install -y sshpass
+
+      # 5️⃣ Sync Frontend using rsync over SSH with password
       - name: Sync Frontend
-        env:
-          SSH_PASS: ${{ secrets.SFTP_PASSWORD }}
         run: |
-          rsync -avz --delete -e "ssh -p 22" ./Frontend/dist/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/
+          sshpass -p ${{ secrets.SFTP_PASSWORD }} rsync -avz --delete \
+          -e "ssh -o StrictHostKeyChecking=no -p 22" \
+          ./Frontend/dist/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Frontend/
 
-      # 5️⃣ Sync Backend using rsync over SSH
+      # 6️⃣ Sync Backend using rsync over SSH with password
       - name: Sync Backend
-        env:
-          SSH_PASS: ${{ secrets.SFTP_PASSWORD }}
         run: |
-          rsync -avz --exclude 'node_modules' --exclude '.git' --exclude '.github' -e "ssh -p 22" ./Backend/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Backend/
+          sshpass -p ${{ secrets.SFTP_PASSWORD }} rsync -avz --exclude 'node_modules' --exclude '.git' --exclude '.github' \
+          -e "ssh -o StrictHostKeyChecking=no -p 22" \
+          ./Backend/ ${{ secrets.SFTP_USER }}@${{ secrets.SFTP_HOST }}:/var/www/vhosts/dhimansoft.com/swag-stitch.dhimansoft.com/Backend/
 
-      # 6️⃣ Run deploy.sh on server via SSH
+      # 7️⃣ Run deploy.sh on server via SSH
       - name: Run deploy.sh
         uses: appleboy/ssh-action@v0.1.7
         with:
