--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.62.0",
     "react-router": "^7.8.0",
     "react-router-dom": "^7.8.0",
+    "react-toastify": "^10.0.1",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
